yamls/prod/nmviajes-ingress5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nmviajes-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: classnmviajes
  tls:
  - hosts:
    - www.nmviajes.com
    secretName: aks-ingress-tls-nmviajes-prd
  defaultBackend:
    service:
      name: nmviajes2
      port:
        number: 80
  rules:
  - host: www.nmviajes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nmviajes2
            port:
              number: 80
